# rust-mult-table

./: .gitignore  Cargo.toml  build.rs  readme.md
src/: app.rs  helpers.rs  lib.rs  main.rs
src/components/: cell.rs  center_on_window.rs  equation.rs  input_modal.rs  menu.rs  mod.rs  mult_table.rs
src/data/: consts.rs  mod.rs  score.rs  user.rs  user_list.rs
src/styles/: cell.rs  menu_button.rs  mod.rs  text_input.rs
