[package]
name = "rust_mult_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dirs-next = "2.0.0"
iced = { version = "0.10.0", features = ["advanced", "lazy", "tokio"] }
iced_aw = { version = "0.7.0", features = ["menu", "modal"] }
image = "0.24.7"
platform-dirs = "0.3.0"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.189", features = ["derive", "rc"] }
tokio = { version = "1.34.0", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
[build-dependencies]
winres = "0.1.12"
